added new logo title

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://vikta2097.github.io/project",
+  "homepage": "https://vikta2097.github.io/test2",
   "name": "ems",
   "version": "0.1.0",
   "private": true,
